Implemented counter and delete task function

--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,11 @@
 
 			<ul class="todo-list">
 				<li class="todo-item">
-					<input type="checkbox" class="checkbox">
+					<!-- <input type="checkbox" class="checkbox">
 					<label class="todo-item__title">Learning javascript</label>
 					<input type="text" class="editfield">
 					<button class="edit"></button>
-					<button class="delete"></button>
+					<button class="delete"></button> -->
 				</li>
 			</ul>
 
