Implemented task filtering

--- a/public/index.html
+++ b/public/index.html
@@ -18,13 +18,13 @@
 			<label class="todo-items__all"></label>
 
 			<ul class="todo-list">
-				<li class="todo-item">
-					<!-- <input type="checkbox" class="checkbox">
+				<!-- <li class="todo-item">
+					<input type="checkbox" class="checkbox">
 					<label class="todo-item__title">Learning javascript</label>
 					<input type="text" class="editfield">
 					<button class="edit"></button>
-					<button class="delete"></button> -->
-				</li>
+					<button class="delete"></button>
+				</li> -->
 			</ul>
 
 			<ul class="footer">
@@ -34,9 +34,9 @@
 				</li>
 				
 				<li class="filters">
-					<a href="#" class="all-tasks">All</a>
-					<a href="#" class="active-tasks">Active</a>
-					<a href="#" class="completed-tasks">Completed</a>
+					<a class="all-tasks">All</a>
+					<a class="active-tasks">Active</a>
+					<a class="completed-tasks">Completed</a>
 				</li>
 
 				<li>
